# bibish

./: .gitignore  BIBISH.kdev4  BUILDING  CHANGELOG  CMakeLists.txt  CONTRIBUTING  CONTRIBUTORS  COPYING  LICENSE  MILESTONES  README  VERSIONING  main.cpp
.kdev4/: .gitignore  BIBISH.kdev4
cmake/: FindSword.cmake  Sources.cmake
src/: .gitignore
src/back/: .gitignore  devo.cpp  devo.h  genbook.cpp  genbook.h  gloss.cpp  gloss.h  lexicon.cpp  lexicon.h  library.cpp  library.h  parser.cpp  parser.h  passage.cpp  passage.h  search.cpp  search.h  strongs.cpp  strongs.h  types.h
src/front/: .gitignore  display.cpp  display.h  info.cpp  info.h  interface.cpp  interface.h  messages.h  pager.cpp  pager.h  parser.cpp  parser.h  reader.cpp  reader.h
